enrolameinto de huellas y person

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ key.secretRefresh=FinabienRefresh2023!
 
 spring.profiles.active=prod
 
+file.uploadusr-dir=C:/Users/Windows/Pictures/huellaskiosko/usuarios
+file.uploadcus-dir=C:/Users/Windows/Pictures/huellaskiosko/clientes
