--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,11 @@
             <artifactId>hibernate-types-60</artifactId>
             <version>2.21.1</version>
         </dependency>
-
+<dependency>
+			<groupId>com.machinezoo.sourceafis</groupId>
+			<artifactId>sourceafis</artifactId>
+			<version>3.17.1</version>
+		</dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
