impelmetacion de huellas con facial

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.profiles.active=prod
 
 file.uploadusr-dir=C:/Users/Windows/Pictures/huellaskiosko/usuarios
 file.uploadcus-dir=C:/Users/Windows/Pictures/huellaskiosko/clientes
+
+# business rules
+guyana.threshold=${THRESHOLD:80}
+
+# 10MB por archivo, 10MB total por petición (ajusta si necesitas más)
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=30MB
+
+face.photo.directory=C:/Users/Windows/Pictures/huellaskiosko/Cara
