Falta ajustar repsuestas y manejo de errores

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,28 @@
             <scope>provided</scope>
         </dependency>
 
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>core</artifactId>
+    <version>3.5.2</version>
+</dependency>
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>javase</artifactId>
+    <version>3.5.2</version>
+</dependency>
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>core</artifactId>
+    <version>3.5.3</version>
+</dependency>
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>javase</artifactId>
+    <version>3.5.3</version>
+</dependency>
+
+
         <!-- Bean Validation (javax → jakarta) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
